feat: fix transaction
