# src/docs/swagger.json
@@ -238,7 +238,7 @@
                 }
             }
         },
-        "/admin/subscriptions/{id}": {
+        "/admin/subscriptions/{subscription_id}": {
             "get": {
                 "security": [
                     {
@@ -257,7 +257,7 @@
                     {
                         "type": "string",
                         "description": "Subscription ID",
-                        "name": "id",
+                        "name": "subscription_id",
                         "in": "path",
                         "required": true
                     }
@@ -301,7 +301,7 @@
                     {
                         "type": "string",
                         "description": "Subscription ID",
-                        "name": "id",
+                        "name": "subscription_id",
                         "in": "path",
                         "required": true
                     }
@@ -348,7 +348,7 @@
                     {
                         "type": "string",
                         "description": "Subscription ID",
-                        "name": "id",
+                        "name": "subscription_id",
                         "in": "path",
                         "required": true
                     },
@@ -390,7 +390,7 @@
                 }
             }
         },
-        "/admin/subscriptions/{id}/payment-status": {
+        "/admin/subscriptions/{subscription_id}/payment-status": {
             "patch": {
                 "security": [
                     {
@@ -412,7 +412,7 @@
                     {
                         "type": "string",
                         "description": "Subscription ID",
-                        "name": "id",
+                        "name": "subscription_id",
                         "in": "path",
                         "required": true
                     },
@@ -540,6 +540,52 @@
                     },
                     "403": {
                         "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/transactions/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns details of a specific transaction",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Get transaction details",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Transaction ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/example.TransactionDetailResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
